--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,17 +1,14 @@
 ---
+import Logo from "./Logo.astro";
 import SwitchDarkMode from "./SwitchDarkMode.astro";
+
 ---
 
 <nav
     class="w-full max-w-[90%] h-full mx-auto text-[#f8f7f3] dark:text-[#f8f7f3] flex justify-between items-center"
 >
-    <div>
-        <span class="font-bold tracking-wider text-base md:text-xl lg:text-2xl">
-            <a href="#" class="text-[#f8f7f3] hover:text-[#f4f4f4]"
-                >Baterías<strong class="text-[#f6c543] uppercase">Express</strong></a
-            >
-        </span>
-    </div>
+    <Logo />
+
     <div id="hamburger" class="md:hidden">
         <button
             id="btn-menu"
@@ -36,12 +33,12 @@ import SwitchDarkMode from "./SwitchDarkMode.astro";
             </svg>
         </button>
     </div>
-    <div class="menu-mobile hidden md:flex">
+    <div class="menu-mobile hidden md:flex transition-colors duration-300">
         <div class="flex md:hidden absolute top-6 right-8 z-10">
             <button
                 id="btn-menu"
-                class="text-white text-2xl"
-                aria-label="Abrir menú"
+                class="text-[#071c3b] dark:text-white text-2xl"
+                aria-label="Cerrar menú"
                 data-action-toggle-menu
             >
                 <!--?xml version="1.0" encoding="utf-8"?--><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
@@ -54,13 +51,13 @@ import SwitchDarkMode from "./SwitchDarkMode.astro";
                 >
                     <path
                         d="M3 21.32L21 3.32001"
-                        stroke="#000000"
+                        stroke="currentColor"
                         stroke-width="1.5"
                         stroke-linecap="round"
                         stroke-linejoin="round"></path>
                     <path
                         d="M3 3.32001L21 21.32"
-                        stroke="#000000"
+                        stroke="currentColor"
                         stroke-width="1.5"
                         stroke-linecap="round"
                         stroke-linejoin="round"></path>
