--- a/src/components/SwitchDarkMode.astro
+++ b/src/components/SwitchDarkMode.astro
@@ -16,63 +16,66 @@
 </div>
 
 <style>
-  .container {
-    position: relative;
-    /* top: 12px; */
-    /* right: 12px; */
-  }
 
-  /* El interruptor - contendor del interruptor*/
-  .switch {
-    font-size: 12px;
-    position: relative;
-    display: inline-block;
-    width: 3.7em;
-    height: 2em;
-    color: transparent;
-  }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+ .switch {
+  font-size: 15px;
+  color: transparent;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+  transform: scale(.9);
+}
 
-  /* Oculta las configuraciones por defecto */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-  /* Interruptor */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.3);
-    transition: 0.4s;
-    border-radius: 5px;
-  }
+/* The slider */
+.slider {
+  --background: #002151;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--background);
+  transition: .5s;
+  border-radius: 30px;
+}
 
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 0.1em;
-    border-radius: 0px;
-    left: 0.3em;
-    bottom: 0.3em;
-    background-color: white;
-    transition: 0.4s;
-  }
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  left: 10%;
+  bottom: 15%;
+  box-shadow: inset 8px -4px 0px 0px #f6c543;
+  background: var(--background);
+  transition: .5s;
+}
 
-  input:checked + .slider {
-    background-color: #171717;
-    box-shadow: inset 2px 5px 10px rgb(0, 0, 0);
-  }
+input:checked + .slider {
+  background-color: #254c85;
+}
 
-  input:checked + .slider:before {
-    transform: translateX(2.8em) rotate(360deg);
-  }
+input:checked + .slider:before {
+  transform: translateX(100%);
+  box-shadow: inset 15px -4px 0px 15px #f6c543;
+}
 
   @media print {
     .no-print {
