--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/sections/Header.astro';
-import Hero from '../components/Hero.astro';
+import Hero from '../components/sections/Hero.astro';
 ---
 
 <Layout title="Recambio de Baterías Express - Servicio 24 Horas">
