New: whatsapp floating button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/sections/Header.astro';
 import Hero from '../components/sections/Hero.astro';
+import FloatButton from '@components/floatButton.astro';
 ---
 
 <Layout title="Recambio de Baterías Express - Servicio 24 Horas">
 	<Header />
 	<Hero />
+	<FloatButton />
 </Layout>
 
 <style>
