--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,9 +3,9 @@ import PhoneIcon from "@icons/phone.astro";
 ---
 
 <section
-  class="w-full h-hero bg-[url('/hero-mobile.png')] md:bg-[url('/hero.png')] bg-cover bg-center bg-no-repeat flex flex-col justify-center items-center gap-4 p-2 md:p-4 lg:p-6"
+  class="w-full h-hero bg-cover bg-center bg-no-repeat flex flex-col justify-center items-center gap-4 p-2 md:p-4 lg:p-6"
 >
-  <div class="logo">
+  <!-- <div class="logo">
     <h1
       class="font-bold text-3xl tracking-widest uppercase text-balance leading-relaxed text-center text-white bg:text-white"
     >
@@ -31,5 +31,5 @@ import PhoneIcon from "@icons/phone.astro";
         classSvg="icon icon-tabler icons-tabler-outline icon-tabler-phone"
       />
     </a>
-  </div>
+  </div> -->
 </section>
