--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/sections/Header.astro';
 import Hero from '../components/sections/Hero.astro';
+import BlurBackground from '@components/BlurBackground.astro';
 ---
 
 <Layout title="Recambio de Baterías Express - Servicio 24 Horas">
+	<BlurBackground />
 	<Header />
 	<Hero />
 </Layout>
