--- a/src/components/shared/Logo.astro
+++ b/src/components/shared/Logo.astro
@@ -5,7 +5,7 @@ import logoSvg from "@assets/svg/logo.svg";
 ---
 
 <div
-  class="inline-flex items-center font-bold tracking-wider text-base md:text-xl lg:text-2xl gap-1"
+  class="inline-flex items-center font-bold tracking-wider text-base md:text-xl lg:text-2xl gap-1 animate-pulse-fade-in duration-1000"
 >
   <Image
     itemprop="logo"
