--- a/src/icons/theme-icon-dark.astro
+++ b/src/icons/theme-icon-dark.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
-  size: number;
-  classSvg: string;
+  size?: number;
+  classSvg?: string;
 }
 
 const { size, classSvg } = Astro.props;
