algunos cambios xd

--- a/src/components/buttons/EnlaceBtn.astro
+++ b/src/components/buttons/EnlaceBtn.astro
@@ -15,6 +15,7 @@ const {
 <a
   href={href}
   class="group relative h-9 flex-shrink-0 rounded-full bg-gradient-to-b from-slate-100 to-slate-200 dark:from-[#393C45] dark:to-[#1A1D24] p-px shadow shadow-black/5 focus:outline-none focus:ring-1 focus:ring-white/20"
+  target="_blank"
 >
   <div
     class="flex h-full items-center justify-center space-x-2 rounded-full  font-bold pl-4 pr-2.5"
