--- a/src/components/nav/desktop/MenuDesktop.astro
+++ b/src/components/nav/desktop/MenuDesktop.astro
@@ -24,7 +24,7 @@ import ThemeToggleBtn from "@components/buttons/ThemeToggleBtn.astro";
   >
     <ThemeToggleBtn id="btn-theme--desktop" />
   </div>
-  <LlamaYaBtn />
+  <LlamaYaBtn href="tel:+34604974571" />
 </div>
 
 <script>
