--- a/src/components/nav/mobile/MenuMobile.astro
+++ b/src/components/nav/mobile/MenuMobile.astro
@@ -19,7 +19,7 @@ import ThemeToggleBtn from "@components/buttons/ThemeToggleBtn.astro";
   >
     <MenuList />
   </ul>
-  <LlamaYaBtn />
+  <LlamaYaBtn href="tel:+34604974571" />
   <div class="mt-6 relative flex h-5 items-center">
     <div class="relative">
       <ThemeToggleBtn id="btn-theme--mobile" />
