--- a/src/components/shared/CardOverview.astro
+++ b/src/components/shared/CardOverview.astro
@@ -13,21 +13,21 @@ const { question, answer } = Astro.props;
   >
     <div class="relative group w-14 h-14">
       <div
-        class="absolute inset-x-5 h-2 bottom-0 bg-rose-400 dark:bg-yellow-400 blur-md opacity-50"
+        class="absolute inset-x-5 h-2 bottom-0 bg-indigo-400 dark:bg-yellow-400 blur-md opacity-50"
       >
       </div>
       <div
         class="relative overflow-hidden h-14 w-14 rounded-2xl p-px bg-gradient-to-b from-slate-200 to-slate-300 dark:from-slate-700 dark:to-[#171C23] shadow-lg shadow-black/5"
       >
         <div
-          class="absolute inset-x-4 h-4 -bottom-2 bg-rose-400 dark:bg-yellow-400 blur-lg dark:opacity-80"
+          class="absolute inset-x-4 h-4 -bottom-2 bg-indigo-400 dark:bg-yellow-400 blur-lg dark:opacity-80"
         >
         </div>
         <div
           class="relative h-full w-full rounded-[15px] bg-gradiennt-radial from-white to-slate-100 dark:from-[#393C45] dark:to-[#171C23] flex justify-center items-center"
         >
           <div
-            class="absolute inset-x-4 h-4 -bottom-2 bg-rose-400 dark:bg-yellow-400 blur-lg dark:opacity-80"
+            class="absolute inset-x-4 h-4 -bottom-2 bg-indigo-400 dark:bg-yellow-400 blur-lg dark:opacity-80"
           >
           </div>
           <slot name="icon" />
