--- a/src/components/shared/AwesomeBgPicture.astro
+++ b/src/components/shared/AwesomeBgPicture.astro
@@ -7,7 +7,7 @@ import BgImage from "@assets/img/background-img.webp";
 <div class="relative flex flex-col justify-end">
   <div class="absolute -inset-x-24 bottom-0 overflow-hidden">
     <div
-      class="absolute -bottom-12 left-1/2 -translate-x-1/2 bg-indigo-400 dark:bg-yellow-400/60 w-3/4 h-1/2 blur-3xl transition-opacity duration-500 opacity-50 group-hover:opacity-80 [border-radius:50%_50%]"
+      class="absolute -bottom-12 left-1/2 -translate-x-1/2 bg-indigo-400 dark:bg-yellow-400/60 w-3/4 h-1/2 blur-3xl transition-opacity duration-500 opacity-50 group-hover:opacity-80 rounded-50-50"
     >
     </div>
     <Image src={BgImage} alt="Fondo de imagen" />
