--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import SectionSeparator from '@components/shared/SectionSeparator.astro';
 import Overview from '@components/sections/Overview.astro';
 import About from '@components/sections/About.astro';
 import FloatMenu from '@components/nav/mobile/FloatMenu.astro';
+import Contact from '@components/sections/Contact.astro';
+import Footer from '@components/sections/Footer.astro';
 ---
 
 <Layout title="Recambio de Baterías Express - Servicio 24 Horas">
@@ -18,7 +20,9 @@ import FloatMenu from '@components/nav/mobile/FloatMenu.astro';
 		<Overview />
 		<About />
 		<SectionSeparator />
+		<Contact />
 	</main>
+	<Footer />
 	<FloatMenu />
 </Layout>
 
