--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -28,6 +28,7 @@ const { title, description } = about;
         formats={["avif", "webp"]}
         alt="Furgoneta de servicios de baterías express"
         class="furgo-image relative w-full aspect-video object-cover [animation-delay:500ms]"
+        loading="eager"
       />
     </AwesomeBgPicture>
   </section>
