--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -21,11 +21,13 @@ const brand = "Baterias Express";
       src={NegativeLogoSvg}
       alt="logo"
       class="max-h-16 w-fit object-contain relative hidden dark:block mix-blend-luminosity brightness-50 opacity-70"
+      loading="eager"
     />
     <Image
       src={LogoSvg}
       alt="logo"
       class="max-h-16 w-fit object-contain relative dark:hidden mix-blend-darken brightness-80 opacity-60"
+      loading="eager"
     />
   </div>
   <div
