--- a/src/components/shared/AwesomeBgPicture.astro
+++ b/src/components/shared/AwesomeBgPicture.astro
@@ -10,7 +10,7 @@ import BgImage from "@assets/img/background-img.webp";
       class="absolute -bottom-12 left-1/2 -translate-x-1/2 bg-indigo-400 dark:bg-yellow-400/60 w-3/4 h-1/2 blur-3xl transition-opacity duration-500 opacity-50 group-hover:opacity-80 rounded-50-50"
     >
     </div>
-    <Image src={BgImage} alt="Fondo de imagen" />
+    <Image src={BgImage} alt="Fondo de imagen" loading="eager" />
   </div>
   <slot name="picture" />
 </div>
