--- a/src/components/buttons/CallFloatBtn.astro
+++ b/src/components/buttons/CallFloatBtn.astro
@@ -11,6 +11,8 @@ const { href } = Astro.props;
   href={href}
   class="group rounded-full bg-gradient-to-b from-yellow-400/50 to-yellow-500/50 shadow shadow-yellow-500/25 focus:outline-none aspect-square"
   target="_blank"
+  aria-label="Llámanos"
+  aria-labelledby="llámanos"
 >
   <div
     class="flex h-full items-center justify-center rounded-full bg-yellow-500/50 text-yellow-50 hover:bg-[#f6c543]/70 font-bold p-3 transition-colors duration-200 aspect-square"
