--- a/src/components/buttons/WhatsappFloatBtn.astro
+++ b/src/components/buttons/WhatsappFloatBtn.astro
@@ -11,6 +11,8 @@ const { href } = Astro.props;
   href={href}
   class="group rounded-full bg-gradient-to-b from-yellow-400/50 to-yellow-500/50 shadow shadow-yellow-500/25 focus:outline-none aspect-square"
   target="_blank"
+  aria-label="Whatsapp"
+  aria-labelledby="whatsapp"
 >
   <div
     class="flex h-full items-center justify-center rounded-full bg-[#93edc5] text-slate-800 hover:bg-[#4befa5] dark:bg-[#1a332b] dark:text-slate-50 dark:hover:bg-[#1c3b31] font-bold p-3 transition-colors duration-200 aspect-square"
