--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,6 @@ const { title } = Astro.props;
 <html lang="es" class="dark scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -20,6 +19,14 @@ const { title } = Astro.props;
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#334155" />
+    <meta name="description" content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites!">
+		<meta name="keywords" content="recambios, madrid, repuestos, accesorios, automóvil, piezas, baterías, coche, tienda, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama">
+		<meta name="author" content="Kelvin Guerrero - Michael Retamozo">
+		<meta property="og:title" content="Baterías Express - Madrid - Toledo - Alrededores">
+		<meta property="og:description" content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites! Tel: 604 974 571">
+    <meta property="og:image" content="/logo.webp" />
+		<meta property="og:url" content="https://www.bateriasexpress.es">
+    <meta property="og:type" content="website">
     <title>{title}</title>
   </head>
   <body
