--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-  title: string;
+    title: string;
 }
 
 const { title } = Astro.props;
@@ -8,71 +8,114 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="es" class="dark scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#334155" />
-    <meta name="description" content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites!">
-		<meta name="keywords" content="recambios, madrid, repuestos, accesorios, automóvil, piezas, baterías, coche, tienda, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama">
-		<meta name="author" content="Kelvin Guerrero - Michael Retamozo">
-		<meta property="og:title" content="Baterías Express - Madrid - Toledo - Alrededores">
-		<meta property="og:description" content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites! Tel: 604 974 571">
-    <meta property="og:image" content="/logo.webp" />
-		<meta property="og:url" content="https://www.bateriasexpress.es">
-    <meta property="og:type" content="website">
-    <title>{title}</title>
-  </head>
-  <body
-    class="bg-white dark:bg-[#0e111a] text-[#071c3b] dark:text-[#f8f7f3] relative overflow-x-hidden"
-  >
-    <slot />
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#334155" />
+        <meta
+            name="description"
+            content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites!"
+        />
+        <meta
+            name="keywords"
+            content="recambios, madrid, repuestos, accesorios, automóvil, piezas, baterías, coche, tienda, madrid, toledo, rápido, express, servicio, 24 horas, calidad, llama"
+        />
+        <meta name="author" content="Kelvin Guerrero - Michael Retamozo" />
+        <meta
+            property="og:title"
+            content="Baterías Express - Madrid - Toledo - Alrededores"
+        />
+        <meta
+            property="og:description"
+            content="Baterías Express ofrece cambio de baterías 24h en Madrid, Toledo y alrededores. ¡Llámanos y te ayudaremos en lo que necesites! Tel: 604 974 571"
+        />
+        <meta property="og:image" content="/logo.webp" />
+        <meta property="og:url" content="https://www.bateriasexpress.es" />
+        <meta property="og:type" content="website" />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org/",
+                "@type": "Service",
+                "serviceType": "vehicle battery spare parts",
+                "provider": {
+                    "@type": "LocalBusiness",
+                    "name": "Baterías Express 24h"
+                },
+                "priceRange": "100,500",
+                "areasServed": "Madrid, Toledo",
+                "paymentAccepted": "Tarjeta,Efectivo,credit card, cash",
+                "openingHours": "Mo-Su",
+                "telephone": "+34604974571",
+                "email": "recambiosexpressbaterias@gmail.com"
+            }
+        </script>
+        <title>{title}</title>
+    </head>
+    <body
+        class="bg-white dark:bg-[#0e111a] text-[#071c3b] dark:text-[#f8f7f3] relative overflow-x-hidden"
+    >
+        <slot />
+    </body>
 </html>
 
 <style is:global>
-  /* onest-latin-wght-normal */
-  @font-face {
-    font-family: "Onest Variable";
-    font-style: normal;
-    font-display: swap;
-    font-weight: 100 900;
-    src: url(@fontsource-variable/onest/files/onest-latin-wght-normal.woff2)
-      format("woff2-variations");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
-      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+    /* onest-latin-wght-normal */
+    @font-face {
+        font-family: "Onest Variable";
+        font-style: normal;
+        font-display: swap;
+        font-weight: 100 900;
+        src: url(@fontsource-variable/onest/files/onest-latin-wght-normal.woff2)
+            format("woff2-variations");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+            U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+            U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
 
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: "Onest Variable", sans-serif;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
+    :root {
+        --accent: 136, 58, 234;
+        --accent-light: 224, 204, 250;
+        --accent-dark: 49, 10, 101;
+        --accent-gradient: linear-gradient(
+            45deg,
+            rgb(var(--accent)),
+            rgb(var(--accent-light)) 30%,
+            white 60%
+        );
+    }
+    html {
+        font-family: "Onest Variable", sans-serif;
+    }
+    code {
+        font-family:
+            Menlo,
+            Monaco,
+            Lucida Console,
+            Liberation Mono,
+            DejaVu Sans Mono,
+            Bitstream Vera Sans Mono,
+            Courier New,
+            monospace;
+    }
 </style>
