add (Brands): se añade scroll animate de los brands de baterias de automoviles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import About from '@components/sections/About.astro';
 import FloatMenu from '@components/nav/mobile/FloatMenu.astro';
 import Contact from '@components/sections/Contact.astro';
 import Footer from '@components/sections/Footer.astro';
+import Brands from '@components/sections/Brands.astro';
 ---
 
 <Layout title="Recambio de Baterías Express - Servicio 24 Horas">
@@ -16,6 +17,7 @@ import Footer from '@components/sections/Footer.astro';
 	<Header />
 	<main class="relative">
 		<Hero />
+		<Brands />
 		<SectionSeparator />
 		<Overview />
 		<About />
