--- a/src/components/sections/Brands.astro
+++ b/src/components/sections/Brands.astro
@@ -3,6 +3,12 @@ import { Image } from "astro:assets"
 
 import TudorBrand from "@assets/img/brands/Tudor.png"
 import VartaBrand from "@assets/img/brands/Varta.svg"
+import BoschBrand from "@assets/img/brands/bosch.webp"
+import VoltaBrand from "@assets/img/brands/Volta.webp"
+import TabBrand from "@assets/img/brands/Tab.webp"
+import ExideBrand from "@assets/img/brands/Exide.webp"
+import FulmenBrand from "@assets/img/brands/Fulmen.webp"
+import YuasaBrand from "@assets/img/brands/YuasaLogo.png"
 ---
 
 <section class="relative mx-auto w-full max-w-screen-xl px-6 sm:px-8 lg:px-12  pb-12 lg:pb-16 -mt-4">
@@ -16,28 +22,22 @@ import VartaBrand from "@assets/img/brands/Varta.svg"
                     <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={BoschBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={VoltaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={TabBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={ExideBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={FulmenBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
-                </div>
-                <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
-                </div>
-                <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={YuasaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
                     <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
@@ -46,16 +46,22 @@ import VartaBrand from "@assets/img/brands/Varta.svg"
                     <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={BoschBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={VoltaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={TudorBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={TabBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
                 <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
-                    <Image src={VartaBrand} alt="prueba" class="object-center object-contain" height={51}>
+                    <Image src={ExideBrand} alt="prueba" class="object-center object-contain" height={51}>
+                </div>
+                <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
+                    <Image src={FulmenBrand} alt="prueba" class="object-center object-contain" height={51}>
+                </div>
+                <div class="shrink-0 relative h-8 w-64 scale-[0.8]">
+                    <Image src={YuasaBrand} alt="prueba" class="object-center object-contain" height={51}>
                 </div>
             </div>
         </div>
