cambios en los brands y ajustes de los datos.

--- a/src/components/buttons/CallFloatBtn.astro
+++ b/src/components/buttons/CallFloatBtn.astro
@@ -19,7 +19,7 @@ const { href } = Astro.props;
   >
     <PhoneIcon
       size={25}
-      classSvg="fill-current opacity-50 dark:drop-shadow text-[#1e293b] dark:text-white"
+      classSvg="fill-current opacity-50 dark:drop-shadow text-[#1e293b] dark:dark:text-slate-900"
     />
   </div>
 </a>
