--- a/src/components/buttons/MenuMobileBtn.astro
+++ b/src/components/buttons/MenuMobileBtn.astro
@@ -7,6 +7,9 @@ import MenuMobileCloseIcon from "@icons/menu-mobile-close.astro";
   id="btnMenu"
   class="relative h-9 flex-shrink-0 rounded-full bg-gradient-to-b from-slate-100 to-slate-200 dark:from-[#393C45] dark:to-[#1A1D24] p-px shadow shadow-black/5 focus:outline-none focus:ring-1 focus:ring-white/20"
   type="button"
+  title="Menu"
+  aria-label="Menu"
+  aria-labelledby="menu-open menu-close"
 >
   <div
     class="flex h-full items-center justify-center space-x-2 rounded-full bg-[#F9FAFB] text-slate-800 hover:bg-white dark:bg-[#171C23] dark:text-slate-50 dark:hover:bg-[#1E242B] font-bold px-4"
