--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,7 +3,7 @@ import { Picture } from "astro:assets";
 import AwesomeBgPicture from "@components/shared/AwesomeBgPicture.astro";
 import FurgoImage from "@assets/img/furgo-bolt.webp";
 
-import about from "src/data/about.json";
+import { about } from "src/data/data.json";
 const { title, description } = about;
 ---
 
