--- a/src/components/buttons/ThemeToggleBtn.astro
+++ b/src/components/buttons/ThemeToggleBtn.astro
@@ -14,6 +14,10 @@ const { id } = Astro.props;
     id={id}
     type="button"
     class="flex h-7 items-center rounded-md px-2 text-yellow-500 hover:text-yellow-700 focus:bg-white/30 focus:outline-none dark:text-yellow-400 dark:hover:text-yellow-300 dark:focus:bg-white/10 disabled:opacity-50"
+    name="theme-button"
+    title="Cambiar tema"
+    aria-label="Cambiar tema"
+    aria-labelledby="theme-button"
   >
     <div class="theme-icon-dark">
       <ThemeDarkIcon size={20} classSvg="fill-current h-4" />
